--- a/comm-activism.html
+++ b/comm-activism.html
@@ -30,7 +30,7 @@
       </p>
   </div>
   <div class="section-image">
-      <img src="" alt="MMIW Advocacy" width="350">
+      <img src="Redress.jpg" alt="MMIW Advocacy" width="350">
 	</div>
  </section>
 </body>
