--- a/comm-activism.html
+++ b/comm-activism.html
@@ -13,7 +13,7 @@
   </section>
   <section class="section">
     <div class="section-image">
-      <img src="" alt="REDress" width="350">
+      <img src="Redress.jpg" alt="REDress" width="350">
 	</div>
   	<div class="section-content">
       <h3>Indigenous Led Movement : The REDress Project </h3>
@@ -30,7 +30,7 @@
       </p>
   </div>
   <div class="section-image">
-      <img src="Redress.jpg" alt="MMIW Advocacy" width="350">
+      <img src="" alt="MMIW Advocacy" width="350">
 	</div>
  </section>
 </body>
