--- a/comm-activism.html
+++ b/comm-activism.html
@@ -24,7 +24,7 @@
  </section>
  <section class="section">
   	<div class="section-content">
-      <h3>Indigenous Led Movement : MMIW Advocacy</h3>
+      <h3>MMIW Advocacy : What you can do</h3>
       <p>
       	TODO: ADD MMIW ADVOCACY
       </p>
