--- a/introduction.html
+++ b/introduction.html
@@ -15,11 +15,11 @@
   	<div class="section-content">
       <h3>What is MMIW?</h3>
       <p>
-      	TODO: ADD DEFINITION FOR MMIW
+      	MMIW refers to the high number of Indigenous women and people who have gone missing, been murdered, or been the victim of violence
       </p>
   </div>
   <div class="section-image">
-      <img src="MMIW-Logo.jpg" alt="MMIW" width="350">
+      <img src="MMIW.jpeg" alt="MMIW" width="350">
 	</div>
  </section>
 </body>
