--- a/background.html
+++ b/background.html
@@ -13,22 +13,25 @@
   </section>
   <section class="section">
     <div class="section-image">
-      <img src="forcedRemoval.jpg" alt="Historical Context" width="450">
+      <img src="removal.jpg" alt="Historical Context" width="450">
     </div>
     <div class="section-content">
       <h3>Colonial Impact : Forced Removal</h3>
       <p>
-		TODO: ADD COLONIAL IMPACT
+	Many Native people live a lifestyle between state and tribal lands. Due to forced removal, only 22% live on reservations. Due to this a variety of issues like reporting policies,
+	       jurisdictional issues, and communication are present 
       </p>
     </div>
   </section>
   <section class="section">
     <div class="section-content">
       <h3>Colonial Impact : Residential Schools</h3>
-      <p>TODO: ADD RES SCHOOL IMPACT</p>
+      <p>In Indian boarding schools, many Indigenous people, especially women were sexually and physically abused by institution leaders. These institutions covered up abuse which set a 
+	      precedent of abuse and neglect that continues today. Due to this, violence and ignorance toward Indigenous peoples has become normalized
+      </p>
     </div>
     <div class="section-image">
-      <img src="resSchools.jpg" alt="Res Schools" width="450">
+      <img src="boarding-schools.jpg" alt="Res Schools" width="450">
     </div>
   </section>
 </body>
