--- a/current-issue.html
+++ b/current-issue.html
@@ -13,32 +13,40 @@
   </section>
   <section class="section">
     <div class="section-image">
-      <img src="" alt="Disparities" width="450">
+      <img src="disparities.jpg" alt="Disparities" width="450">
     </div>
     <div class="section-content">
       <h3>Stats / Data : Disparities</h3>
       <p>
-		TODO: ADD DISPARITIES
+		On some reservations women are murdered at a rate greater than 10 times the national average<br> 
+		Over 80% of Indigenous people have experienced violence in their life<br>
+		2.5x more likely to experience violent crimes<br>
+		2x more likely to experience rape / sexual assault<br>
       </p>
     </div>
   </section>
   <section class="section">
     <div class="section-content">
       <h3>Stats / Data : Underreporting</h3>
-      <p>TODO: ADD UNDERREPORTING</p>
+      <p>
+	      A study conducted several years ago showed that out of 5172 cases of missing / murdered Native women, only 
+	      116 of them were logged into the Department of Justice’s database
+      </p>
     </div>
     <div class="section-image">
-      <img src="" alt="Underreporting" width="450">
+      <img src="underreporting.jpg" alt="Underreporting" width="450">
     </div>
   </section>
   <section class="section">
     <div class="section-image">
-      <img src="" alt="Jurisdictional Issues" width="450">
+      <img src="juris-issues.jpg" alt="Jurisdictional Issues" width="450">
     </div>
     <div class="section-content">
       <h3>Jurisdictional Issues : Tribal vs Federal</h3>
       <p>
-		TODO: ADD JURISDICTIONAL ISSUES
+		Federal laws regarding violent crimes on Native land with non-Native perpetrators create difficulties within prosecution. 
+	      	The FBI is responsible for serious crimes, but Tribal police are law enforcement on Native Land. However, tribal courts have 
+	      	no jurisdictional power over non-Natives so even if they do get jurisdiction, they cannot prosecute 
       </p>
     </div>
   </section>
