--- a/current-issue.html
+++ b/current-issue.html
@@ -13,7 +13,7 @@
   </section>
   <section class="section">
     <div class="section-image">
-      <img src="disparities.jpg" alt="Disparities" width="450">
+      <img src="disparities.png" alt="Disparities" width="450">
     </div>
     <div class="section-content">
       <h3>Stats / Data : Disparities</h3>
