--- a/current-issue.html
+++ b/current-issue.html
@@ -34,7 +34,7 @@
       </p>
     </div>
     <div class="section-image">
-      <img src="underreporting.jpg" alt="Underreporting" width="450">
+      <img src="underreporting.png" alt="Underreporting" width="450">
     </div>
   </section>
   <section class="section">
