--- a/media-representation.html
+++ b/media-representation.html
@@ -15,21 +15,23 @@
   	<div class="section-content">
       <h3>Mainstream Media Silence</h3>
       <p>
-      	TODO: MAINSTREAM SILENCE
+      	It has been revealed that the media fails to include MMIW stories in their reporting. Out of the 506 cases examined by the Urban Indian Health 
+	Institute, local / national news covered about 1/4th of those. It’s even less likely that the media continues to produce foll-ups to the stories 
       </p>
   </div>
   <div class="section-image">
-      <img src="" alt="Mainstream Silence" width="350">
+      <img src="silence.jpg" alt="Mainstream Silence" width="350">
 	</div>
  </section>
   <section class="section">
   <div class="section-image">
-      <img src="" alt="Story Telling" width="350">
+      <img src="stroytelling.jpg" alt="Story Telling" width="350">
 	</div>
   	<div class="section-content">
       <h3>Indigenous Storytelling</h3>
       <p>
-      	TODO: STORYTELLING
+      	Some Indigenous storytellers came together to create the docuseries, “Murder in Bighorn.” The series features and brings the issue of MMIW to the 
+	spotlight. The creator made sure to involve Indigenous voices and perspectives to “properly tell the story” 
       </p>
   </div>
  </section>
