--- a/media-representation.html
+++ b/media-representation.html
@@ -25,7 +25,7 @@
  </section>
   <section class="section">
   <div class="section-image">
-      <img src="stroytelling.jpg" alt="Story Telling" width="350">
+      <img src="storytelling.jpg" alt="Story Telling" width="350">
 	</div>
   	<div class="section-content">
       <h3>Indigenous Storytelling</h3>
