--- a/gov-response.html
+++ b/gov-response.html
@@ -13,12 +13,14 @@
   </section>
   <section class="section">
     <div class="section-image">
-      <img src="" alt="Savannas Act" width="350">
+      <img src="savanna.jpeg" alt="Savannas Act" width="350">
 	</div>
   	<div class="section-content">
       <h3>Legislation : Savanna's Act</h3>
       <p>
-      	TODO: ADD SAVANNAS ACT
+      		Savanna LaFontaine was a member of the Spirit Lake Nation. She was 22 years old and 8 months pregnant when she was murdered.  
+	      	Savanna’s Act was an effort to boost the federal response to MMIW and was named after her. The act works to improve the collection 
+	      	of data regarding MMIP while also clarifying responsibilities for all law enforcement (tribal and non), regarding MMIP cases 
       </p>
   </div>
  </section>
@@ -26,11 +28,11 @@
   	<div class="section-content">
       <h3>Legislation : Not Invisible Act</h3>
       <p>
-      	TODO: ADD NOT INVISIBLE ACT
+      		The Not Invisible Act aimed to handling the crisis of MMIW through engagement with law enforcement, tribes, federals, and service providers on top of enhancing coordination of federal systems 
       </p>
   </div>
   <div class="section-image">
-      <img src="" alt="Not Invisible Act" width="350">
+      <img src="not-invisible.png" alt="Not Invisible Act" width="350">
 	</div>
  </section>
 </body>
