--- a/comm-activism.html
+++ b/comm-activism.html
@@ -18,7 +18,9 @@
   	<div class="section-content">
       <h3>Indigenous Led Movement : The REDress Project </h3>
       <p>
-      	TODO: ADD REDREDD PROJ
+	      The Redress Project was an installation of red dresses made to focus on the MMIW crisis created by Jaime Black, a member of the Metis nation. Her goal was 
+	      to bring awareness to racialized and gendered crimes against Indigenous women and people. The project places the Indigenous women's body as a target of violence. 
+	      Through doing this she reclaimed space for Indigenous women's presence. She attempted to create a conversation about the social and political issues involving Indigenous people 
       </p>
   </div>
  </section>
@@ -26,11 +28,14 @@
   	<div class="section-content">
       <h3>MMIW Advocacy : What you can do</h3>
       <p>
-      	TODO: ADD MMIW ADVOCACY
+	      May 5th is Missing & Murdered Indigenous Persons Awareness Day also known as Red Dress Day. On this day it's recommended you wear red, use your social media platform, 
+	      and more to bring awareness and fight the injustices Indigenous people face.<br>
+	      Educate yourself. You can do research of your own on people's stories and experiences to understand just how impactful this crisis is on Indigenous communities. 
+	      Any understanding is more helpful than ignorance 
       </p>
   </div>
   <div class="section-image">
-      <img src="" alt="MMIW Advocacy" width="350">
+      <img src="awareness.jpg" alt="MMIW Advocacy" width="350">
 	</div>
  </section>
 </body>
