--- a/current-issue.html
+++ b/current-issue.html
@@ -17,12 +17,12 @@
     </div>
     <div class="section-content">
       <h3>Stats / Data : Disparities</h3>
-      <p>
-		On some reservations women are murdered at a rate greater than 10 times the national average<br> 
-		Over 80% of Indigenous people have experienced violence in their life<br>
-		2.5x more likely to experience violent crimes<br>
-		2x more likely to experience rape / sexual assault<br>
-      </p>
+      <ul>
+	<li>On some reservations women are murdered at a rate greater than 10 times the national average</li> 
+	<li>Over 80% of Indigenous people have experienced violence in their life</li>
+	<li>2.5x more likely to experience violent crimes</li>
+	<li>2x more likely to experience rape / sexual assault</li>
+      </ul>
     </div>
   </section>
   <section class="section">
