--- a/current-issue.html
+++ b/current-issue.html
@@ -15,7 +15,7 @@
     <div class="section-image">
       <img src="disparities.png" alt="Disparities" width="450">
     </div>
-    <div class="section-content">
+    <div class="section-currIss">
       <h3>Stats / Data : Disparities</h3>
       <ul>
 	<li>On some reservations women are murdered at a rate greater than 10 times the national average</li> 
