--- a/current-issue.html
+++ b/current-issue.html
@@ -16,7 +16,7 @@
       <img src="disparities.png" alt="Disparities" width="450">
     </div>
     <div class="section-currIss">
-      <h3>Stats / Data : Disparities</h3>
+      <h3 class="h2">Stats / Data : Disparities</h3>
       <ul>
 	<li>On some reservations women are murdered at a rate greater than 10 times the national average</li> 
 	<li>Over 80% of Indigenous people have experienced violence in their life</li>
