--- a/current-issue.html
+++ b/current-issue.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <section>
-  	<h2 class="h2">Current Issue / Contributing Factors</h2>
+  	<h2 align='center'>Current Issue / Contributing Factors</h2>
   </section>
   <section class="section">
     <div class="section-image">
