--- a/current-issue.html
+++ b/current-issue.html
@@ -9,14 +9,14 @@
 </head>
 <body>
   <section>
-  	<h2 align='center'>Current Issue / Contributing Factors</h2>
+  	<h2>Current Issue / Contributing Factors</h2>
   </section>
   <section class="section">
     <div class="section-image">
       <img src="disparities.png" alt="Disparities" width="450">
     </div>
     <div class="section-currIss">
-      <h3 class="h2">Stats / Data : Disparities</h3>
+      <h3 align='center'>Stats / Data : Disparities</h3>
       <ul>
 	<li>On some reservations women are murdered at a rate greater than 10 times the national average</li> 
 	<li>Over 80% of Indigenous people have experienced violence in their life</li>
