--- a/current-issue.html
+++ b/current-issue.html
@@ -15,9 +15,9 @@
     <div class="section-image">
       <img src="disparities.png" alt="Disparities" width="450">
     </div>
-    <div class="section-currIss">
+    <div class="section-content">
       <h3 align='center'>Stats / Data : Disparities</h3>
-      <ul>
+      <ul align='left'>
 	<li>On some reservations women are murdered at a rate greater than 10 times the national average</li> 
 	<li>Over 80% of Indigenous people have experienced violence in their life</li>
 	<li>2.5x more likely to experience violent crimes</li>
