--- a/comm-activism.html
+++ b/comm-activism.html
@@ -27,15 +27,15 @@
  <section class="section">
   	<div class="section-content">
       <h3>MMIW Advocacy : What you can do</h3>
-      <p>
-	      May 5th is Missing & Murdered Indigenous Persons Awareness Day also known as Red Dress Day. On this day it's recommended you wear red, use your social media platform, 
-	      and more to bring awareness and fight the injustices Indigenous people face.<br>
-	      Educate yourself. You can do research of your own on people's stories and experiences to understand just how impactful this crisis is on Indigenous communities. 
-	      Any understanding is more helpful than ignorance 
-      </p>
+      <ul align='left'>
+	<li>May 5th is Missing & Murdered Indigenous Persons Awareness Day also known as Red Dress Day. On this day it's recommended you wear red, use your social media platform, 
+	      and more to bring awareness and fight the injustices Indigenous people face</li>
+	<li>Educate yourself. You can do research of your own on people's stories and experiences to understand just how impactful this crisis is on Indigenous communities. 
+	      Any understanding is more helpful than ignorance</li>
+      </ul>
   </div>
   <div class="section-image">
-      <img src="awareness.jpg" alt="MMIW Advocacy" width="350">
+      <img src="awareness.jpg" alt="MMIW Advocacy" width="550">
 	</div>
  </section>
 </body>
