--- a/current-issue.html
+++ b/current-issue.html
@@ -16,12 +16,12 @@
       <img src="disparities.png" alt="Disparities" width="450">
     </div>
     <div class="section-content">
-      <h3 align='center'>Stats / Data : Disparities</h3>
+      <h3>Stats / Data : Disparities</h3>
       <ul align='left'>
-	<li>On some reservations women are murdered at a rate greater than 10 times the national average</li> 
-	<li>Over 80% of Indigenous people have experienced violence in their life</li>
-	<li>2.5x more likely to experience violent crimes</li>
-	<li>2x more likely to experience rape / sexual assault</li>
+	<li>On some reservations women are murdered at a rate greater than 10 times the national average</li><br> 
+	<li>Over 80% of Indigenous people have experienced violence in their life</li><br>
+	<li>2.5x more likely to experience violent crimes</li><br>
+	<li>2x more likely to experience rape / sexual assault</li><br>
       </ul>
     </div>
   </section>
