--- a/current-issue.html
+++ b/current-issue.html
@@ -15,8 +15,14 @@
     <div class="section-image">
       <img src="disparities.png" alt="Disparities" width="450">
     </div>
-    <div class="section-curr">
+    <div class="section-content">
       <h3>Stats / Data : Disparities</h3>
+	<style>
+	  ul{
+	    list-style-position: inside;
+	    padding-left: 0;
+	  }
+	</style>
       <ul>
 	<li>On some reservations women are murdered at a rate greater than 10 times the national average</li><br> 
 	<li>Over 80% of Indigenous people have experienced violence in their life</li><br>
