--- a/comm-activism.html
+++ b/comm-activism.html
@@ -30,8 +30,7 @@
       <ul align='left'>
 	<li>May 5th is Missing & Murdered Indigenous Persons Awareness Day also known as Red Dress Day. On this day it's recommended you wear red, use your social media platform, 
 	      and more to bring awareness and fight the injustices Indigenous people face</li><br>
-	<li>Educate yourself. You can do research of your own on people's stories and experiences to understand just how impactful this crisis is on Indigenous communities. 
-	      Any understanding is more helpful than ignorance</li>
+	<li>Educate yourself. You can do research of your own on people's stories and experiences to understand the impact this crisis has on Indigenous communities</li>
       </ul>
   </div>
   <div class="section-image">
