--- a/sources.html
+++ b/sources.html
@@ -14,13 +14,13 @@
     <div class="footer-column">
       <h3>Web Sources</h3>
       <ul>
-        <li><a href="" target="_blank">TODO: ADD ARTICLE SOURCES</a></li>
+        <li>TODO: ADD ARTICLE SOURCES</a></li>
       </ul>
     </div>
     <div class="footer-column">
       <h3>Image Credits</h3>
       <ul>
-        <li>TODO: ADD IMAGE SOURCES</li>
+        <li><a href="" target="_blank">TODO: ADD IMAGE SOURCES</li>
       </ul>
     </div>
   </div>
@@ -28,9 +28,7 @@
 
   <section class="student-info">
     <p><strong>Made by: </strong>Weeko A. Thompson</p>
-    <p><strong>Date:</strong> TODO: UPDATE DATE</p>
+    <p><strong>Updated: </strong>4 May 2025</p>
   </section>
-  
-
 </body>
 </html>
