--- a/sources.html
+++ b/sources.html
@@ -14,13 +14,13 @@
     <div class="footer-column">
       <h3>Web Sources</h3>
       <ul>
-        <li>TODO: ADD ARTICLE SOURCES</a></li>
+        <li><a href="" target="_blank">TODO: ADD ARTICLE SOURCES</a></li>
       </ul>
     </div>
     <div class="footer-column">
       <h3>Image Credits</h3>
       <ul>
-        <li><a href="" target="_blank">TODO: ADD IMAGE SOURCES</li>
+        <li>TODO: ADD IMAGE SOURCES</li>
       </ul>
     </div>
   </div>
