--- a/sources.html
+++ b/sources.html
@@ -20,7 +20,7 @@
     <div class="footer-column">
       <h3>Image Credits</h3>
       <ul>
-        <li>TODO: ADD IMAGE SOURCES</li>
+        <li><a href="https://www.aknwrc.org/event/national-day-of-awareness-for-missing-and-murdered-indigenous-women-mmiw/">What is MMIW?</li>
       </ul>
     </div>
   </div>
