--- a/sources.html
+++ b/sources.html
@@ -21,6 +21,17 @@
       <h3>Image Credits</h3>
       <ul>
         <li><a href="https://www.aknwrc.org/event/national-day-of-awareness-for-missing-and-murdered-indigenous-women-mmiw/" target="_blank">What is MMIW?</a></li>
+        <li><a href="https://www.al-tn-trailoftears.net/the-ride/trail-history" target="_blank">Forced Removal</a></li>
+        <li><a href="https://boardingschoolhealing.org/education/us-indian-boarding-school-history/" target="_blank">Residental Schools</a></li>
+        <li><a href="https://www.pacificclinics.org/news/bias-in-media/" target="_blank">Disparities</a></li>
+        <li><a href="https://www.culturalsurvival.org/news/national-day-awareness-missing-and-murdered-indigenous-women-may-5th" target="_blank">Underreporting</a></li>
+        <li><a href="https://theappeal.org/the-crisis-of-murdered-and-missing-indigenous-women-and-why-tribes-need-the-power-to-address-it/" target="_blank">Jurisdiction</a></li>
+        <li><a href="https://www.redbubble.com/i/greeting-card/MMIW-Clothing-Missing-Murdered-Indigenous-Women-Awareness-Silent-No-More-by-MarOlv/53268756.5MT14" target="_blank">Silence</a></li>
+        <li><a href="https://www.kalw.org/show/your-call/2023-11-23/murder-in-big-horn-highlights-the-epidemic-of-mmiw" target="_blank">Storytelling</a></li>
+        <li><a href="https://www.amostwantedpodcast.com/episodes/59-the-murder-of-savanna-lafontaine-greywind" target="_blank">Savanna's Act</a></li>
+        <li><a href="https://nativenewsonline.net/currents/not-invisible-act-commission-to-hear-testimony-on-mmip-in-montana" target="_blank">Not Invisible Act</a></li>
+        <li><a href="https://americanindian.si.edu/explore/exhibitions/item?id=973" target="_blank">REDress</a></li>
+        <li><a href="https://indianyouth.org/missing-or-murdered-indigenous-persons-awareness-day/" target="_blank">Advocacy</a></li>
       </ul>
     </div>
   </div>
