--- a/sources.html
+++ b/sources.html
@@ -14,7 +14,7 @@
     <div class="footer-column">
       <h3>Web Sources</h3>
       <ul>
-        <li><a href="" target="_blank">TODO: ADD ARTICLE SOURCES</a></li>
+        <li>TODO: ADD ARTICLE SOURCES</li>
       </ul>
     </div>
     <div class="footer-column">
