--- a/sources.html
+++ b/sources.html
@@ -14,7 +14,9 @@
     <div class="footer-column">
       <h3>Web Sources</h3>
       <ul>
-        <li class="apa-reference">Melissad. (2025, March 13). Missing and Murdered Indigenous Women (MMIW) - Native Hope. Native Hope. https://www.nativehope.org/missing-and-murdered-indigenous-women-mmiw/</li>
+        <li class="apa-reference">
+          Melissad. (2025, March 13). <em>Missing and Murdered Indigenous Women (MMIW)</em>. Native Hope. https://www.nativehope.org/missing-and-murdered-indigenous-women-mmiw/
+        </li>
       </ul>
     </div>
     <div class="footer-column">
