--- a/sources.html
+++ b/sources.html
@@ -15,7 +15,7 @@
       <h3>Web Sources</h3>
       <ul>
         <li class="apa-reference">
-          Melissad. (2025, March 13). <em>Missing and Murdered Indigenous Women (MMIW)</em>. Native Hope. https://www.nativehope.org/missing-and-murdered-indigenous-women-mmiw/
+          Melissad. (2025, March 13). <em>Missing and Murdered Indigenous Women (MMIW)</em>. Native Hope.<br>https://www.nativehope.org/missing-and-murdered-indigenous-women-mmiw/
         </li>
       </ul>
     </div>
