--- a/media-representation.html
+++ b/media-representation.html
@@ -16,7 +16,7 @@
       <h3>Mainstream Media Silence</h3>
       <p>
       	It has been revealed that the media fails to include MMIW stories in their reporting. Out of the 506 cases examined by the Urban Indian Health 
-	Institute, local / national news covered about 1/4th of those. It’s even less likely that the media continues to produce foll-ups to the stories 
+	Institute, local / national news covered about 1/4th of those. It’s even less likely that the media continues to produce follow-ups to the stories 
       </p>
   </div>
   <div class="section-image">
